(05/18/2007)

*** Failure to destroy a resource causes a warning only if the
    job is completed, but not when the submission process fails.
	It's impossible (I can't figure out an easy way with my 
	current knowledge) to know whether the submit call has 
	succeeded in creating the resource or not.
	
*** Don't clean up after a failure. WS-GRAM seems to do that
    automatically
	
*** Removed a spurious failure state change

(05/17/2007)

*** Fixed flow issues when canceling a job

*** Fixed a bug that could cause a NPE if WS-GRAM would report a
    failed job without an attached fault.
	
*** Updated WS-GRAM jars to 4.0.4.


-------------------------------2.4---------------------------------

(11/24/2006)

*** Set status to failed if the exit code is not 0

(10/18/2006)

*** Attempt to fix handling of status notifications. There is some
	oddness in jobs having no initial status (which could cause
	NPEs on anything that would query details of the status)

(04/12/2006)

*** Use the new spec.isDelegationEnabled()

*** Fixed boot crash when no ip set in cog.properties

*** Some cleanups

(10/14/2005)

*** Committed an updated wsrf_core jar which fixes the following:
	http://bugzilla.globus.org/globus/show_bug.cgi?id=3813
	http://bugzilla.globus.org/globus/show_bug.cgi?id=3814

(09/20/2005)

*** updated class loader configuration

(08/26/2005)

*** Added patch from David Del Vecchio (ddelvecc@yahoo.com)
    to support passing environment variables

-------------------------------2.3---------------------------------

(08/23/2005)

*** Uptaded GT4 jars to GT4.0.1
	
(08/18/2005)

*** Fixed Bug #3666 (lowercasing of job managers that are not
    in the job manager map)

-------------------------------2.2---------------------------------

(06/21/2005)

*** Updated GT4 jars

*** Added logic for polling in GT4FT job re-connect	in package
	org.globus.cog.abstraction.impl.execution.gt4_0_0ft

(06/14/2005)

*** Added the GT4FT provider in package